# datasmith

./: .env.development  .env.production  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-db.yml  docker-compose.yml  eslint.config.mjs  makefile  package.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  debugger.py  entrypoint.sh  manage.py  model.pt  mypy.ini  populate_test_db.py  pyproject.toml  test_gpu.py  trained_model.pt
backend/app/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  storage.py  urls.py  views.py  views_segmentation.py
backend/app/functions/: admin_actions.py  admin_functions.py  celery_tasks.py  nn.py  prediction.py  segmentation.py  training.py
backend/app/migrations/: 0001_initial.py  0002_alter_neuralnetworkmodel_input_shape_and_more.py  0002_remove_dataset_last_analyzed.py  0002_remove_mlalgorithm_content_type_and_more.py  0003_alter_dataset_dataset_type.py  0003_mlmodel_target_column.py  0003_quadratictrainingdata.py  0004_alter_mlmodel_model_type.py  0004_mlmodel_status_trainingrun.py  0005_alter_mlmodel_model_type.py  0005_mlmodel_max_iter_mlmodel_model_type_and_more.py  0006_alter_mlmodel_model_type.py  0007_alter_mlmodel_model_type.py  (+14 more)
backend/core/: models.py  storage_utils.py  sygnals.py  views.py
backend/datasmith/: asgi.py  celery.py  db_router.py  logging.py  settings.py  urls.py  wsgi.py
backend/datasource/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/scripts/: type_check.py
backend/userauth/: admin.py  cache_manager.py  logging_config.py  logging_utils.py  models.py  permission_views.py  permissions.py  rate_limiting.py  serializers.py  services.py  tasks.py  urls.py  views.py
(+140 files in other folders)
