[tool.poetry]
name = "datasmith"
version = "0.1.0"
description = ""
authors = ["Dantes <dantessvirid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg-binary = "^3.2.3"
psycopg = {extras = ["binary"], version = "^3.2.3"}
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
